fix bottom of the page spacing

--- a/css/less/pages.less
+++ b/css/less/pages.less
@@ -16,7 +16,7 @@
 
 .main {
 	background: #eee;
-	padding: 20px 0 0;
+	padding: 20px 0 100px;
 }
 
 .main .content h1 { margin: 0; }
@@ -1252,7 +1252,6 @@ html.js .edd_download_purchase_form label .edd_price_option_name {
 	overflow: auto;
 	border: 2px solid #ddd;
 	border-radius: 6px;
-	margin-bottom: 140px;
 	padding: 20px;
 	position: relative;
 	z-index: 1;
